# alpha_k-hull

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  design_GUI.ui  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/: design_GUI_antiguo.py
src/programa_tesis_pro/: algoritmos.py  design_GUI.py  main_window.py  resources_rc.py
src/resources/: resources.qrc  resources_rc.py
tests/: conftest.py  dos areas solucion.txt  error de dibujo de wedges.txt  funciona posicion convexa.txt  prueba datos.txt  prueba para tesis.txt  puntos con dos cuñas pero solo dibuja 1.txt  puntos donde no se hace bien el filtrado de puntos solucion.txt  puntos que si calcula bien el area solucion.txt  si_da_bien_el_area.txt
